welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not enough arguments for constructor Array: (_length: Int)Array[java.awt.Color].
Unspecified value parameter _length.
var T = new Array[Color];
        ^