welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {

var j=0;
var T = new Array[Color];
var haut=0;
var i=0;
haut=getMondeHauteur();
for(i<-0 to haut){
	T(i)=getCouleurSol();
	avance();
}
recule(haut);
for(j<-0 to haut){
	avance(); gauche(); avance();
	for(i<-0 to haut) { 
		leveBrosse();
		setCouleurBrosse(T(i));
		baisseBrosse(); avance();
	}
	
	
}



}
